--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,8 +3,5 @@ name = "generic-rust"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
 [dependencies]
-axum = "0.7.5"
-tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
+rocket = "0.5.0"
