--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-axum = "0.7.5"
-tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
+actix-web = "4.5.1"
